After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 646964 - rtpmanager: ignore a BYE if it is sent with our internal SSRC
rtpmanager: ignore a BYE if it is sent with our internal SSRC
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other All
: Normal major
: 0.10.29
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2011-04-06 22:04 UTC by Håvard Graff (hgr)
Modified: 2011-04-11 21:47 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
patch (916 bytes, patch)
2011-04-06 22:05 UTC, Håvard Graff (hgr)
committed Details | Review

Description Håvard Graff (hgr) 2011-04-06 22:04:59 UTC
Some rouge endpoints out there will actually send a BYE with the far-ends internal SSRC as a hack to make them stop sending media. (as a way of putting them on HOLD)

This little patch basically prevents such mischief.
Comment 1 Håvard Graff (hgr) 2011-04-06 22:05:21 UTC
Created attachment 185369 [details] [review]
patch
Comment 2 Olivier Crête 2011-04-11 21:42:47 UTC
commit 53c88ae33e4a42ad2ec101688b8ecddddedea155
Author: Havard Graff <havard.graff@tandberg.com>
Date:   Wed Jun 23 11:29:58 2010 +0200

    rtpmanager: ignore a BYE if it is sent with our internal SSRC
    
    https://bugzilla.gnome.org/show_bug.cgi?id=646964