rtpmanager: ignore a BYE if it is sent with our internal SSRC

https://bugzilla.gnome.org/show_bug.cgi?id=646964